--- a/src/DotNet-Portfolio/Views/Shared/_Layout.cshtml
+++ b/src/DotNet-Portfolio/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
             <li>
                 <strong>Character</strong>
                 <ul>
-                    <li>@Html.ActionLink("Silly Stuff", "Index", "Interests")</li>
+                    <li>@Html.ActionLink("Silly Stuff", "Index", "Character")</li>
                     <li><a href="#">Item 2</a></li>
                     <li><a href="#">Item 3</a></li>
                 </ul>
