--- a/src/DotNet-Portfolio/wwwroot/css/styles.css
+++ b/src/DotNet-Portfolio/wwwroot/css/styles.css
@@ -1,10 +1,16 @@
-﻿/**
+﻿@font-face{
+    font-family: "rm-almanack";
+    src: url(../fonts/rm_almanack.ttf) format('truetype');
+}
+
+/**
  * Body CSS
  */
 html,
 body {
   height: 100%;
   background-color: #e3e8f1;
+  font-family: rm-almanack, cursive;
 }
 
 html,
