add search by github user name function, allows user to view starred repos of their chosen user

--- a/src/DotNet-Portfolio/Views/Shared/_Layout.cshtml
+++ b/src/DotNet-Portfolio/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                 <ul>
                     <li><a href="https://github.com/GrapeSalad/">Github (external site)</a></li>
                     <li>@Html.ActionLink("Github Stars", "GitStars", "Projects")</li>
+                    <li>@Html.ActionLink("Github Star-Search", "StarSearch", "Projects")</li>
                     <li>@Html.ActionLink("Digital-ease", "DigitalEase", "Projects")</li>
                 </ul>
             </li>
